@@ -42,7 +42,7 @@ if (($uids = get_input_value('_uid', RCUBE_INPUT_POST)) && ($flag = get_input_va
   }
 
   $marked = $IMAP->set_flag($uids, $flag);
-  
+
   if ($marked == -1) {
     // send error message
     if ($_POST['_from'] != 'show')
@@ -55,7 +55,7 @@ if (($uids = get_input_value('_uid', RCUBE_INPUT_POST)) && ($flag = get_input_va
   if ($flag == 'DELETED' && $CONFIG['read_when_deleted'] && !empty($_POST['_ruid'])) {
     $ruids = get_input_value('_ruid', RCUBE_INPUT_POST);
     $read = $IMAP->set_flag($ruids, 'SEEN');
-    
+
     if ($read != -1 && !$CONFIG['skip_deleted'])
       $OUTPUT->command('flag_deleted_as_read', $ruids);
   }
@@ -110,17 +110,17 @@ if (($uids = get_input_value('_uid', RCUBE_INPUT_POST)) && ($flag = get_input_va
       if ($count && $uids != '*' && ($jump_back || $nextpage_count > 0)) {
         $sort_col   = isset($_SESSION['sort_col'])   ? $_SESSION['sort_col']   : $CONFIG['message_sort_col'];
         $sort_order = isset($_SESSION['sort_order']) ? $_SESSION['sort_order'] : $CONFIG['message_sort_order'];
-  
+
         $a_headers = $IMAP->list_headers($mbox, NULL, $sort_col, $sort_order,
 	    $jump_back ? NULL : $count);
-      
+
         rcmail_js_message_list($a_headers, false, false);
       }
     }
   }
-  
+
   $OUTPUT->send();
 }
-  
+
 exit;
 ?>
